fix(nav): hide horizontal scrollbar in sidebar nav menu
Change .atc-navmenu from overflow:auto to overflow-x:hidden

--- a/src/AtcWeb/Styles/core/_base.scss
+++ b/src/AtcWeb/Styles/core/_base.scss
@@ -65,7 +65,8 @@ atc-appbar-band {
 
 
 .atc-navmenu {
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   margin-bottom: 12px;
 }
 
